--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "chai": "^4.3.7",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
